user can add projects
